proj2/test/test_11712009_1.out
Error type 10 at Line 2: Not Array.
Error type 5 at Line 2: Two sides of assignment have inconsistent type.
