proj2/test/test_11712009_1.spl
int main(int a, int b) {
    int f = a[0];
}